changed color of navbar

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -49,4 +49,50 @@
   margin-bottom: 20px;
 }
 
-.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+.nav, .pagination, .carousel, .panel-title a {
+  cursor: pointer;
+}
+
+.navbar-text {
+  margin-left: 15px;
+}
+
+#custom-bootstrap-menu.navbar-default .navbar-brand {
+  color: #ecf0f1;
+}
+#custom-bootstrap-menu.navbar-default {
+  font-size: 14px;
+  background-color: rgba(255, 78, 0, 1);
+  border-width: 1px;
+  border-radius: 4px;
+}
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a,
+#custom-bootstrap-menu.navbar-default .navbar-text{
+  color: #ecf0f1;
+  background-color: rgba(248, 248, 248, 0);
+}
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:hover,
+#custom-bootstrap-menu.navbar-default .navbar-nav>li>a:focus {
+  color: #ecf0f1;
+  background-color: rgba(248, 248, 248, 0);
+}
+#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a,
+#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:hover,
+#custom-bootstrap-menu.navbar-default .navbar-nav>.active>a:focus {
+  color: #ecf0f1;
+  background-color: #f76423;
+}
+#custom-bootstrap-menu.navbar-default .navbar-toggle {
+  border-color: #f76423;
+}
+#custom-bootstrap-menu.navbar-default .navbar-toggle:hover,
+#custom-bootstrap-menu.navbar-default .navbar-toggle:focus {
+  background-color: #f76423;
+}
+#custom-bootstrap-menu.navbar-default .navbar-toggle .icon-bar {
+  background-color: #f76423;
+}
+#custom-bootstrap-menu.navbar-default .navbar-toggle:hover .icon-bar,
+#custom-bootstrap-menu.navbar-default .navbar-toggle:focus .icon-bar {
+  background-color: #ff4e00;
+}
