--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 
-<div id="custom-bootstrap-menu" class="navbar navbar-default navbar-static-top" role="navigation" ng-controller="NavbarCtrl">
+<div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="/" class="navbar-brand">ngsoundcloud</a>
@@ -17,12 +17,26 @@
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/search')}"><a href="/search"> Search</a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/people')}"><a href="/people"> People</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}">
+          <a href="/login">Login</a>
+        </li>
+        <li ng-show="isLoggedIn() && currentTrack">
+          <p class="navbar-text playing">
+            <strong>playing <i class="glyphicon glyphicon-volume-up"></i></strong> {{ currentTrack.title }}
+          </p>
+        </li>
+        <li ng-show="isLoggedIn()">
+          <p class="navbar-text">
+            Hello {{ getCurrentUser().name }}
+          </p>
+        </li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}">
+          <a href="/settings"><span class="glyphicon glyphicon-cog"></span></a>
+        </li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
       </ul>
     </div>
