removed unnecessary logs

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -12,8 +12,8 @@
     </div>
     <div collapse="isCollapsed" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-          <a ng-href="{{item.link}}">{{item.title}}</a>
+        <li ng-class="{active: isActive('/')}">
+          <a ng-href="/">Playlist</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/search')}"><a href="/search"> Search</a></li>
@@ -26,7 +26,7 @@
         </li>
         <li ng-show="isLoggedIn() && currentTrack">
           <p class="navbar-text playing">
-            <strong>playing <i class="glyphicon glyphicon-volume-up"></i></strong> {{ currentTrack.title }}
+            <strong>now playing <i class="glyphicon glyphicon-volume-up"></i></strong> {{ currentTrack.title }}
           </p>
         </li>
         <li ng-show="isLoggedIn()">
