--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,7 +2,7 @@
 <div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="NavbarCtrl">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand">ngsoundcloud</a>
+      <a ng-href="/search" class="navbar-brand">ngsoundcloud</a>
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -13,22 +13,22 @@
     <div collapse="isCollapsed" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li ng-class="{active: isActive('/')}">
-          <a ng-href="/">Playlist</a>
+          <a ng-show="isLoggedIn()" ng-href="/">Playlist</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/search')}"><a href="/search"> Search</a></li>
+        <li ng-class="{active: isActive('/search')}"><a href="/search"> Search</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/people')}"><a href="/people"> People</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}">
-          <a href="/login">Login</a>
-        </li>
-        <li ng-show="isLoggedIn() && currentTrack">
+        <li ng-show="currentTrack">
           <p class="navbar-text playing">
             <strong>now playing <i class="glyphicon glyphicon-volume-up"></i></strong> {{ currentTrack.title }}
           </p>
         </li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">Sign up</a></li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}">
+          <a href="/login">Login</a>
+        </li>        
         <li ng-show="isLoggedIn()">
           <p class="navbar-text">
             Hello {{ getCurrentUser().name }}
